--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
           <p>You have the option of monthly or yearly billing.</p>
           <div class="plans">
             <div class="plan" id="arcade">
-              <img src="/assets/images/icon-arcade.svg" alt="" />
+              <img src="./assets/images/icon-arcade.svg" alt="" />
               <span class="plan-name">Arcade</span>
               <div class="plan-price">$9/mo</div>
               <span class="hide">2 months free</span>
             </div>
             <div class="plan" id="advanced">
-              <img src="/assets/images/icon-advanced.svg" alt="" />
+              <img src="./assets/images/icon-advanced.svg" alt="" />
               <span class="plan-name">Advanced</span>
               <div class="plan-price">$12/mo</div>
               <span class="hide">2 months free</span>
             </div>
             <div class="plan" id="pro">
-              <img src="/assets/images/icon-pro.svg" alt="" />
+              <img src="./assets/images/icon-pro.svg" alt="" />
               <span class="plan-name">Pro</span>
               <div class="plan-price">$15/mo</div>
               <span class="hide">2 months free</span>
@@ -191,7 +191,7 @@
         <!-- Step 5 start -->
         <div class="step-main center hide">
           <div class="thanks">
-            <img src="/assets/images/icon-thank-you.svg" alt="" />
+            <img src="./assets/images/icon-thank-you.svg" alt="" />
             <h1>Thank you!</h1>
             <p>
               Thanks for confirming your subscription! We hope you have fun
